# android-vnc

./: Makefile.am  ProjectHome.md  README
kernel/: linux-2.6.23-android-m3-rc20-kbde.patch
src/: Makefile.am  fbvncserver.c
trunk/: AUTHORS  autogen.sh  configure.ac
trunk/src/: fbvncserver.c
